--- a/.github/actions/check-spec-version/action.yml
+++ b/.github/actions/check-spec-version/action.yml
@@ -35,6 +35,10 @@ outputs:
 runs:
   using: 'composite'
   steps:
+    - uses: actions/checkout@v6
+      with:
+        submodules: true
+
     - name: Get current spec version
       id: current-spec-version
       shell: bash
