--- a/.github/actions/create-spec-compliance-badge/action.yml
+++ b/.github/actions/create-spec-compliance-badge/action.yml
@@ -41,6 +41,6 @@ runs:
       id: generate
       with:
         label: up-spec compliance
-        status: ${{ inputs.oft-exit-code }}
+        status: ${{ inputs.oft-exit-code == '0' && 'passing' || 'failing' }}
         color: ${{ inputs.oft-exit-code == '0' && 'brightgreen' || 'red' }}
         path: ${{ inputs.badge-path }}
